chore: adjust renovate config to better fit
disable automerges, as there is no fully functioning and reliable testing yet
dont bump app version on dependency updates, as releases will calculate their own version whenever they happen

--- a/renovate.json
+++ b/renovate.json
@@ -4,12 +4,10 @@
         "config:recommended",
     
         ":pinVersions",
-        ":automergeMinor",
         ":rebaseStalePrs",
     
         "group:linters"
       ],
       "labels": ["dependencies"],
-      "automergeStrategy": "fast-forward",
-      "bumpVersion": "patch"
+      "automergeStrategy": "fast-forward"
   }
